--- a/package.json
+++ b/package.json
@@ -21,14 +21,18 @@
     "del": "^3.0.0",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-autoprefixer": "^4.0.0",
+    "gulp-cheerio": "^0.6.2",
     "gulp-concat": "^2.6.1",
     "gulp-csso": "^3.0.0",
     "gulp-load-plugins": "^1.5.0",
     "gulp-notify": "^3.0.0",
     "gulp-pug": "^3.3.0",
     "gulp-pug2": "0.0.2",
+    "gulp-replace": "^0.5.4",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.0",
+    "gulp-svg-sprite": "^1.3.7",
+    "gulp-svgmin": "^1.2.4",
     "gulp-watch": "^4.3.11"
   },
   "dependencies": {
