--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gulp-watch": "^4.3.11"
   },
   "dependencies": {
+    "fs": "0.0.1-security",
     "jquery": "^3.2.1",
     "normalize.css": "^7.0.0"
   }
